<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maAlert_tv_title_channel" />

    <EditText
        android:id="@+id/searchTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonSrch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/searchTxt"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="19dp"
        android:text="@string/maAlert_bt_OK" />

    <Button
        android:id="@+id/buttonCncl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSrch"
        android:layout_alignBottom="@+id/buttonSrch"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/maAlert_bt_CANCEL" />

</RelativeLayout>